Prevent grid cells from shrinking on overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -102,6 +102,7 @@ table.layout {
     width: auto;
 
     td {
+        min-width: 3rem;
         width: 3rem;
         height: 3rem;
     }
